# model-weight-stealing

./: .gitignore  README.md  Watermarking.ipynb  main.py  pyproject.toml
disguide/: README.md  disguide.py
knockoff/: README.md  Teacher_model_accuracy.ipynb  steal_kd_sklearn_deterministic.py  steal_labels_sklearn_deterministic.py
logit_reconstruction/: README.md  collect_logits.py  reconstruct.py  run_experiments.py
logit_reconstruction/experiments/: Qwen_Qwen2.5-0.5B_1000_metrics.txt  Qwen_Qwen2.5-0.5B_100_metrics.txt  Qwen_Qwen2.5-0.5B_1200_metrics.txt  Qwen_Qwen2.5-0.5B_500_metrics.txt  Qwen_Qwen2.5-0.5B_800_metrics.txt  all_results.json  carlini_results.json  distilgpt2_1000_metrics.txt  distilgpt2_100_metrics.txt  distilgpt2_1200_metrics.txt  distilgpt2_500_metrics.txt  distilgpt2_800_metrics.txt  gpt2-medium_1000_metrics.txt  gpt2-medium_100_metrics.txt  gpt2-medium_1200_metrics.txt  gpt2-medium_500_metrics.txt  gpt2-medium_800_metrics.txt  gpt2_1000_metrics.txt  gpt2_100_metrics.txt  gpt2_1200_metrics.txt  gpt2_500_metrics.txt  gpt2_800_metrics.txt  precision_1 decimals_metrics.txt  precision_3 decimals_metrics.txt  precision_5 decimals_metrics.txt  precision_Full_metrics.txt  precision_distilgpt2_1 decimals_metrics.txt  precision_distilgpt2_3 decimals_metrics.txt  precision_distilgpt2_5 decimals_metrics.txt  precision_distilgpt2_Full_metrics.txt  precision_gpt2-medium_1 decimals_metrics.txt  precision_gpt2-medium_3 decimals_metrics.txt  precision_gpt2-medium_Full_metrics.txt  (+6 more)
outputs/: manifest.json  manifest_labels.json
scripts/: README.md  classy.py
